network_policies/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata: 
  name: test-network-policy
  namecpace: default
spec:
  podSelector: 
    matchLabels:
      role: db
  policyTypes: 
    - Ingress
    - Egress
  ingress:
    - from:
      - ipBlock:
          cidr: 172.17.0.0/16
          expect:
            - 172.17.0.0/24
      - namespaceSelector:
          matchLabels:
            project: myproject
      - podSelector:
          matchLabels:
            role: frontend
  egress:
  - to:
      - ipBlock:
          cidr: 10.0.0.0/24
    ports: 
      - protocol: TCP
        port: 5978 


----
# targetting range of ports 
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: multi-port-egress
  namespace: default
spec:
  podSelector: 
    matchLabels:
      role: db
  policyTypes:
    - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
      - protocol: TCP
        port: 32000
        endPort: 32768

----
# targetting multiple namespaces by label
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: egress-namespaces
spec:
  podSelector:
    matchLabels:
      app: myapp
  policyTypes:
  - Egress
  egress:
  - to: 
    - namespaceSelector:
        matchExpressions:
        - key: namespace
          operator: In
          values: ["frontend", "backend"]
